refactor(server): don't use reflections library
Reflections brings in Guava dependency and several more, for such a
simple task it's a bit too much.